# openfang

./: .gitignore  Cargo.toml  test_home_expand.rs  tmux-dev.sh  tmux-split.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: chat-functionality-regression.md
.planning/phases/01-core-foundation/: 01-01-define-step-types-PLAN.md  01-01-define-step-types-SUMMARY.md  01-02-typescript-types-PLAN.md  01-02-typescript-types-SUMMARY.md  01-03-steps-api-endpoints-PLAN.md  01-03-steps-api-endpoints-SUMMARY.md  01-04-agent-tools-PLAN.md  01-04-agent-tools-SUMMARY.md  01-05-react-flow-viz-PLAN.md  01-05-react-flow-viz-SUMMARY.md  01-06-integration-testing-PLAN.md  01-06-integration-testing-SUMMARY.md  (+3 more)
crates/openfang-desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/openfang-runtime/: Cargo.toml
crates/openfang-webui/: CHAT_ALIGNMENT_PLAN.md  CLAUDE.md  Cargo.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
design-system/openfang/: LAYOUT-NEUMORPHIC.md  MASTER.md
design-system/openfang-sop/: MASTER.md
tutorials/: README.md
tutorials/01-rust-basics/: README.md
tutorials/02-cargo-workspace/: README.md
tutorials/03-types-traits/: README.md
tutorials/03-types-traits/code-examples/: Cargo.toml  newtype_demo.rs  trait_demo.rs
tutorials/04-llm-driver/: README.md
tutorials/05-agent-loop/: README.md
tutorials/06-memory-system/: README.md
tutorials/07-building-agent/: README.md
(+176 files in other folders)
